# cambot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: cameras.mock.yaml  cameras.sdp.yaml
scripts/: multiview.py
src/cambot/: __main__.py  agent.py  camera.py  capture.py  cli.py  config.py  context.py  mock.py  motion.py  telegram.py  tools.py  watcher.py
